--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -62,46 +62,31 @@
         </div>
         {% if lendhistory %}
             {% for history in lendhistory %}
+
                 <div class="zjjl_con">
                    <div class="zjjl_h">
-                       <div class="zjjl_dd">订单号：19002017082888901253</div>
-                       <div class="zjjl_zt">已完成</div>
+                       <div class="zjjl_dd">订单号：{{ history.id }}</div>
+                       <div class="zjjl_zt">{{ history.status }}</div>
                    </div>
                    <div class="zjjl_h">
-                       <div class="zjjl_tf">用时：3时28分</div>
-                       <div class="zjjl_tf">费用：1元</div>
-                   </div>
-                   <div class="zjjl_h">
-                       <div class="zjjl_zj">
-                           <div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/jc.png' %}" alt="借出"/></div>
-                           租：2017/08/27  18:30:28<br>西江千户苗寨 西服务区售票大厅
-                       </div>
-                   </div>
-                </div>
-                <table>
-                    <tr>
-                        <td colspan="2">订单号：{{ history.id }}</td>
-                        <td>{{ history.status }}</td>
-                    </tr>
-                    <tr>
-                        <td>用时：
-                            {% if history.return_time %}
+                       <div class="zjjl_tf">用时：<span class="col_z"> {% if history.return_time %}
 {#                                {{ history.return_time - history.time }}#}
                             {% else %}
                                 {{ history.time }}
-                            {% endif %}
-                        </td>
-                        <td>费用：{{ history.money }}</td>
-                        <td></td>
-                    </tr>
-                    <tr>租：{{ history.start_time }}
-                        {{ history.site }}
-                    </tr>
+                            {% endif %}</span></div>
+                       <div class="zjjl_tf">费用：<span class="col_z">{{ history.money }}元</span></div>
+                   </div>
+                   <div class="zjjl_h zjjl_h_hr">
+                           <div class="zjjl_zj"><div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/hr.png' %}" alt="借出"></div>
+                           还：2017/08/27  18:30:28<br>西江千户苗寨 西服务区售票大厅</div>
+                            <div class="zjjl_zj"><div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/jc.png' %}" alt="借出"></div>
+                           租：{{ history.start_time }}<br>{{ history.site }}</div>
+                   </div>
+                 </div>
 
-                </table>
             {% endfor %}
         {% else %}
-            <span>您竟然还没体验过自拍神器，哇，还等什么～<br><a href="">借自拍杆</a></span>
+            <span>您竟然还没体验自拍神器，还等什么～<br><a href="">借自拍杆</a></span>
         {% endif %}
 
     </div>
