--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -337,5 +337,5 @@ input.weui-btn_plain-default{
 .zjjl_icon_img{width: 20px;height: auto;border: none;}
 .zt_jxz{color:#179B16;}
 .zt_zgm{color:#CE3C39;}
-.wk_ts{width: 100%;height: 60px;line-height: 28px;text-align: center;}
+.wk_ts{width: 100%;height: 60px;line-height: 28px;text-align: center;border-top: 1px solid #d2d2d2;border-bottom: 1px solid #d2d2d2;}
 .wk_ts a{text-decoration: none;color: #cc0099;}
