--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -339,3 +339,4 @@ input.weui-btn_plain-default{
 .zt_zgm{color:#CE3C39;}
 .wk_ts{width: 100%;height: 60px;line-height: 28px;text-align: center;border-top: 1px solid #d2d2d2;border-bottom: 1px solid #d2d2d2;background-color: white;padding-top: 20px;padding-bottom: 20px;}
 .wk_ts a{text-decoration: none;color: #cc0099;}
+.zgtk{width: 380px;height: 380px;margin: 50px auto;background: url("/static/images/weixin/tk.jpg") center no-repeat;}
