--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -203,11 +203,11 @@ a{
   display:inline-block;
 }
 .weui-btn_default{
-  color:#000000;
+  color:#cc0099;
   background-color:#F8F8F8;
 }
 .weui-btn_default:not(.weui-btn_disabled):visited{
-  color:#000000;
+  color:#cc0099;
 }
 .weui-btn_default:not(.weui-btn_disabled):active{
   color:rgba(0, 0, 0, 0.6);
