--- a/templates/weixin/output_tip.html
+++ b/templates/weixin/output_tip.html
@@ -6,7 +6,15 @@
 {% endblock %}
 
 {% block content %}
-
+<div class="ts_cont">
+            <div class="zgtk"></div>
+            </div>
+            <div class="nr_con">
+            <a href="#" id="scanQRCode" class="weui-btn weui-btn_default weui-btn_primary page__bd_spacing">查看附近可借自拍杆</a>
+            <div class="sm_cont">
+                您很有眼光，此处拍照人多，自拍杆已被<span class="col_z">掏空</span>
+            </div>
+            </div>
         {% if has_opacity %}
 
             <span>请注意机柜屏幕信息</span>
