--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -32,6 +32,7 @@
                 url:"/weixin/wxconfig/",//自己填写请求地址
                 data:{url: location.href},
                 success:function(result){
+                    debugger
                     wx.config({
                         // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
                         debug: true,
