--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -316,8 +316,8 @@ input.weui-btn_plain-default{
   font-size:13px;
 }
 
-.ts_cont{width: 100%;height: 480px;float: left;text-align: center;}
-.zgjs{width: 380px;height: 380px;margin: 50px auto;background: url("/static/images/weixin/zgjs.gif") center no-repeat;}
+.ts_cont{width: 100%;height: 240px;float: left;text-align: center;}
+.zgjs{width: 60%;height: 60%;margin: 20px auto;background: url("/static/images/weixin/zgjs.gif") center no-repeat;}
 .nr_con{padding: 0 15px;}
 .nr_con_all{padding: 0;background-color:#DEDEDE}
 .ts_til{width: 100%;margin: 50px auto;border-bottom: 1px dashed #ececec;color:#999999;text-align: center;}
