--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <div class="ts_cont">
-        <div class="zgjs"></div>
+        <div class="zgjs"><img class="zgjs_icon_img" src="{% static '/images/weixin/zgjs.gif' %}" alt="租杆介绍"></div>
     </div>
     <div class="nr_con">
             <a href="#" id="scanQRCode" class="weui-btn weui-btn_primary page__bd_spacing">借自拍杆</a>
