--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -316,7 +316,7 @@ input.weui-btn_plain-default{
   font-size:13px;
 }
 
-.ts_cont{width: 100%;height: 240px;float: left;text-align: center;margin: 20px auto;}
+.ts_cont{width: 100%;height: auto;float: left;text-align: center;margin: 20px auto;}
 .zgjs_img{width: 60%;height: auto;}
 .nr_con{padding: 0 15px;}
 .nr_con_all{padding: 0;background-color:#DEDEDE}
