--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -5,6 +5,7 @@ html{
 body{
   line-height:1.6;
   font-family:-apple-system-font, "Helvetica Neue", sans-serif;
+  font-weight: 200;
 }
 *{
   margin:0;
