--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -6,6 +6,7 @@ body{
   line-height:1.6;
   font-family:-apple-system-font, "Helvetica Neue", sans-serif;
   font-weight: 200;
+  font-size: 14px;
 }
 *{
   margin:0;
