--- a/templates/weixin/output_tip.html
+++ b/templates/weixin/output_tip.html
@@ -6,29 +6,33 @@
 {% endblock %}
 
 {% block content %}
-<div class="ts_cont">
-            <div class="zgtk"></div>
-            </div>
-            <div class="nr_con">
+       <div class="ts_cont">
+            <img class="zgjs_img" src="{% static '/images/weixin/tk.jpg' %}" alt="自拍杆被掏空">
+       </div>
+       <div class="nr_con">
             <a href="#" id="scanQRCode" class="weui-btn weui-btn_default weui-btn_primary page__bd_spacing">查看附近可借自拍杆</a>
             <div class="sm_cont">
                 您很有眼光，此处拍照人多，自拍杆已被<span class="col_z">掏空</span>
             </div>
-            </div>
+       </div>
         {% if has_opacity %}
-
-            <span>请注意机柜屏幕信息</span>
-            <span>自拍杆将从闪亮指示灯位置吐出</span>
-            <span>请及时取走</span>
+            <div class="ts_cont">
+                  <img class="zgjs_img" src="{% static '/images/weixin/cgts.gif' %}" alt="出杆提示">
+            </div>
+             <div class="nr_con">
+               <div class="sm_cont">
+                请注意机柜屏幕信息<br>自拍杆将从<span class="col_z">闪亮指示灯位置</span>吐出<br>请及时取走掏空
+            </div>
+            </div>
         {% else %}
             <div class="ts_cont">
-            <div class="zgtk"></div>
+               <img class="zgjs_img" src="{% static '/images/weixin/tk.jpg' %}" alt="自拍杆被掏空">
             </div>
             <div class="nr_con">
-            <a href="#" id="scanQRCode" class="weui-btn weui-btn_default weui-btn_primary page__bd_spacing">查看附近可借自拍杆</a>
-            <div class="sm_cont">
+                <a href="#" id="scanQRCode" class="weui-btn weui-btn_default weui-btn_primary page__bd_spacing">查看附近可借自拍杆</a>
+                <div class="sm_cont">
                 您很有眼光，此处拍照人多，自拍杆已被<span class="col_z">掏空</span>
-            </div>
+                </div>
             </div>
         {% endif %}
 
