--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -346,4 +346,4 @@ input.weui-btn_plain-default{
 .gr_cont{width: 100%;height:100%; background-color: #f8f8f8;}
 .gr_top{width:100%;height: auto;border-bottom: 1px solid #e5e5e5;text-align: center;line-height: 30px;background-color: white;padding-bottom: 30px;color: #999999;}
 .gr_tx{width:120px;height:120px;border-radius:120px;margin: 30px auto;border: none;}
-.gr_nc{font-size: 18px;font-weight: normal;line-height: 20px;width: 100%;margin-top: -20px;color: #333333;}
+.gr_nc{font-size: 18px;font-weight: normal;width: 100%;margin-top: -20px;color: #333333;}
