--- a/templates/weixin/return.html
+++ b/templates/weixin/return.html
@@ -10,7 +10,7 @@
        <img class="zgjs_img" src="{% static '/images/weixin/hgjs.gif' %}" alt="还杆介绍">
     </div>
     <div class="nr_con">
-            <a href="#"  class="weui-btn weui-btn_primary page__bd_spacing">还自拍杆</a>
+            <a href="#"  id="scanQRCode" class="weui-btn weui-btn_primary page__bd_spacing">还自拍杆</a>
             <div class="ts_til page__bd_spacing"><div class="ts_til_test">温馨提示</div> </div>
             <div class="sm_cont">
                 第一步：手机扫描机柜二维码，待机柜门自动打开<br>
@@ -20,7 +20,66 @@
 
 
     <script src="/static/js/jquery-3.2.1.js"></script>
+    <script src="{% static '/js/jweixin-1.2.0.js' %}"></script>
     <script>
+         $.ajaxSetup({data: {
+            csrfmiddlewaretoken: '{{ csrf_token }}'
+        }});
+         $(document).ready(function () {
+            $.ajax({
+                type:"post",
+                url:"/weixin/wxconfig/",//自己填写请求地址
+                data:{url: location.href},
+                success:function(result){
+                    wx.config({
+                        // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
+                        debug: false,
+                        // 必填，公众号的唯一标识
+                        appId: result.appid,
+                        // 必填，生成签名的时间戳
+                        timestamp:result.timestamp,
+                        // 必填，生成签名的随机串
+                        nonceStr:result.noncestr,
+                         // 必填，签名，见附录1
+                         signature:result.signature,
+                         // 必填，需要使用的JS接口列表，所有JS接口列表见附录2
+                         jsApiList : [ 'checkJsApi', 'scanQRCode' ]
+                     });
+                  }
+            });
+        });
+
+         wx.error(function(res) {
+            alert("出错了：" + res.errMsg);//这个地方的好处就是wx.config配置错误，会弹出窗口哪里错误，然后根据微信文档查询即可。
+        });
+
+         wx.ready(function() {
+            wx.checkJsApi({  
+         jsApiList : ['scanQRCode'],  
+         success:function(res) {
+         }  
+      }); 
+
+            //点击按钮扫描二维码
+            document.querySelector('#scanQRCode').onclick = function () {
+                var is_lend_exist = 'True';
+                if (is_deposit == 'True')
+                {
+                    alert('还没有租自拍杆，先去租一个');
+                    location.href = '/weixin/lend/?openid='+ openid;
+                }else
+                {
+                    wx.scanQRCode({
+                        needResult: 0, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
+                        scanType: ["qrCode","barCode"], // 可以指定扫二维码还是一维码，默认二者都有
+                        success: function (res) {
+                            var result = res.resultStr; // 当needResult 为 1 时，扫码返回的结果
+                        }
+                    });
+                }
+
+            };
+        });
 
     </script>
 {% endblock %}
