--- a/templates/weixin/goto_cabinet.html
+++ b/templates/weixin/goto_cabinet.html
@@ -25,53 +25,49 @@
     <script src="/static/js/relalive.js"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.2&services=true"></script>
     <script>
-        function initMap(){
-            createMap();
-            setMapEvent();
-            addMapControl();
-        }
+        var map = new BMap.Map("allmap");
+        map.centerAndZoom(new BMap.Point(116.404, 39.915), 15);
 
-        function createMap(){
-            var map = new BMap.Map("dituContent");
-            var point = new BMap.Point({{ lon }}, {{ lat }});
-            map.centerAndZoom(point,19);
+        var myP1 = new BMap.Point(116.380967,39.913285);    //起点
+        var myP2 = new BMap.Point(116.424374,39.914668);    //终点
+        var myIcon = new BMap.Icon("http://lbsyun.baidu.com/jsdemo/img/Mario.png", new BMap.Size(32, 70), {    //小车图片
+            //offset: new BMap.Size(0, -5),    //相当于CSS精灵
+            imageOffset: new BMap.Size(0, 0)    //图片的偏移量。为了是图片底部中心对准坐标点。
+          });
+        var driving2 = new BMap.DrivingRoute(map, {renderOptions:{map: map, autoViewport: true}});    //驾车实例
+        driving2.search(myP1, myP2);    //显示一条公交线路
 
-            addMarker(map, point, '{{ cabinet_id }}');
+        window.run = function (){
+            var driving = new BMap.DrivingRoute(map);    //驾车实例
+            driving.search(myP1, myP2);
+            driving.setSearchCompleteCallback(function(){
+                var pts = driving.getResults().getPlan(0).getRoute(0).getPath();    //通过驾车实例，获得一系列点的数组
+                var paths = pts.length;    //获得有几个点
 
-            window.map = map;
-        }
+                var carMk = new BMap.Marker(pts[0],{icon:myIcon});
+                map.addOverlay(carMk);
+                i=0;
+                function resetMkPoint(i){
+                    carMk.setPosition(pts[i]);
+                    if(i < paths){
+                        setTimeout(function(){
+                            i++;
+                            resetMkPoint(i);
+                        },100);
+                    }
+                }
+                setTimeout(function(){
+                    resetMkPoint(5);
+                },100)
 
-        function setMapEvent(){
-            map.enableDragging();
-            map.enableScrollWheelZoom();
-            map.enableDoubleClickZoom();
-            map.enableKeyboard();
-        }
+            });
+        };
 
-        function addMapControl(){
-            var ctrl_nav = new BMap.NavigationControl({anchor:BMAP_ANCHOR_TOP_LEFT,type:BMAP_NAVIGATION_CONTROL_LARGE});
-            map.addControl(ctrl_nav);
-            var ctrl_ove = new BMap.OverviewMapControl({anchor:BMAP_ANCHOR_BOTTOM_RIGHT,isOpen:1});
-            map.addControl(ctrl_ove);
-            var ctrl_sca = new BMap.ScaleControl({anchor:BMAP_ANCHOR_BOTTOM_LEFT});
-            map.addControl(ctrl_sca);
-        }
-
-        function addMarker(map, point, cabinet_id){
-          var marker = new BMap.Marker(point);
-
-          marker.setTitle(cabinet_id);
-          marker.addEventListener("click",get_attribute);
-          map.addOverlay(marker);
-
-        }
-
-        function get_attribute() {
-            alert('navigate');
-        }
+        setTimeout(function(){
+            run();
+        },1500);
 
 
-        initMap();
     </script>
 
 {% endblock %}
