--- a/templates/weixin/goto_cabinet.html
+++ b/templates/weixin/goto_cabinet.html
@@ -27,7 +27,7 @@
     {% ifequal is_weixin True %}
         <script charset="utf-8" src="http://map.qq.com/api/js?v=2.exp"></script>
     {% else %}
-        <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=b592c79c6b67ba952132ac8d517706f8"></script>
+        <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=b592c79c6b67ba952132ac8d517706f8&plugin=AMap.Walking"></script>
         <script src="http://cache.amap.com/lbs/static/es5.min.js"></script>
         <script type="text/javascript" src="http://cache.amap.com/lbs/static/addToolbar.js"></script>
 
