--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -3,6 +3,16 @@
 {% block title %}茄子自拍{% endblock %}
 {% block head %}
 
+    <style type="text/css">
+        .amap-logo {
+                display: none;
+         }
+       .amap-copyright {
+              bottom:-100px;
+               display: none;
+        }
+    </style>
+
 
 {% endblock %}
 
