--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -77,7 +77,7 @@
                 <div class="home_ys icon_ys">
            <div class="home_ys_img"><img class="icon_img" src="{% static 'images/about/shengji.png' %}"></div>
            <h6>战略合作</h6>
-           <div class="home_ys_sm">合作景区：<br>
+           <div class="home_ys_sm zl_text">合作景区：<br>
                1)景区提供场地<br>
 2)机柜广告招商管理和收益归景区<br>
 3)景区安排人员负责日常维护<br><br>
