--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,6 +52,7 @@ h4{font-size: 16px;line-height: 16px; font-weight:200;padding-left: 20px;}
 h5{font-size: 14px;line-height: 16px; font-weight:100;text-align: center;margin-bottom: 40px;color: #666666;margin-top: -15px;}
 h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 h7{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold;margin-bottom: 20px;}
+.stro{font-weight: 400;color: #333333;}
 
 
 .con_white{width: 80%;margin: 40px auto;text-align: center;padding-top: 10px;}
