--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -77,11 +77,11 @@
                 <div class="home_ys icon_ys">
            <div class="home_ys_img"><img class="icon_img_zl" src="{% static 'images/home/zlhz.png' %}"></div>
            <h6>战略合作</h6>
-           <div class="home_ys_sm zl_text"><span class="stro">合作景区：<br></span>
+           <div class="home_ys_sm zl_text"><span class="stro">合作景区收益和付出：<br></span>
                1)景区提供场地<br>
 2)机柜广告招商管理和收益归景区<br>
 3)景区安排人员负责日常维护<br><br>
-<span class="stro">轻拍科技：<br></span>
+<span class="stro">轻拍科技收益和付出：<br></span>
 1)轻拍科技提供硬件设备<br>
 2)为景区增加互联网获客渠道<br>
 3)为景区提供自拍数据<br>
